fixed horizontal align for modals

--- a/CSS/main.css
+++ b/CSS/main.css
@@ -368,3 +368,13 @@ body {
     display: table-cell;
     vertical-align: middle;
 }
+
+.modal-content {
+    /* Bootstrap sets the size of the modal in the modal-dialog class, we need to inherit it */
+    width:inherit;
+    max-width:inherit; /* For Bootstrap 4 - to avoid the modal window stretching full width */
+    height:inherit;
+    /* To center horizontally */
+    margin: 0 auto;
+    pointer-events:all;
+}
